--- a/app/src/main/res/layout/message_fragment.xml
+++ b/app/src/main/res/layout/message_fragment.xml
@@ -8,21 +8,55 @@
   -->
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="viewmodel"
+            type="com.kishan.contactstask.ui.message.MessageViewModel" />
     </data>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".message.MessageFragment">
+        tools:context=".ui.message.MessageFragment">
 
-        <TextView
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_contact_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Hello" />
+            app:adapter="@{viewmodel.messageListAdapter}"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+
+
+        <RelativeLayout android:id="@+id/rl_error"
+            android:layout_width="match_parent"
+            app:mutableVisibility="@{viewmodel.noDataFound}"
+            android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/image_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@drawable/ic_message_black_24dp" />
+
+            <TextView
+                android:id="@+id/tv_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/image_error"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/space_extra_large"
+                android:gravity="center"
+                android:text="@string/no_data_found"
+                android:textAlignment="center"
+                android:textSize="@dimen/font_16" />
+
+        </RelativeLayout>
 
     </FrameLayout>
 </layout>
